--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         </div>
     </nav>
     <div class="header-container">
+        <video autoplay muted loop class="bg-video">
+            <source src="./styles/assets/bg.webm" type="video/mp4">
+        </video>
         <div class="header-info header-topic">Выбери свой путь!</div>
         <div class="header-info header-footer">
-            <div>По всем попросам:</div>
+            <div>По всем вопросам:</div>
             <div>+7 (906) 786-65-50</div>
         </div>
         <div class="header-part left-part active">
